# CSCI-3060U-Course-Project---Winter-2026

./: .gitignore  README.md  current_accounts.txt  daily_script.sh  master_accounts.txt  merged_transactions.txt  pyproject.toml  weekly_script.sh
.github/workflows/: ci.yaml
Backend/: lists.py  main.py  merge_transactions.py  transactions.py
Backend/tests/: conftest.py  test_transfer.py  test_withdrawal.py
Frontend/: main.py  transactions.py  utils.py
Frontend/tests/: conftest.py  test_changePlan.py  test_create.py  test_delete.py  test_deposit.py  test_disable.py  test_login.py  test_logout.py  test_paybill.py  test_placeholder.py  test_transfer.py  test_withdrawal.py
